Fix Polish have it all headline layout issue. Bug 883848.
- Also add JS to force scroll top on page refresh/load.

--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -1047,6 +1047,14 @@ html[lang=hu] {
   }
 }
 
+html[lang="pl"] {
+  #have-it-all .scroller-on {
+    #stage #landing-heading {
+      top: 210px;
+    }
+  }
+}
+
 #mission {
   color: @textColorTertiary;
   position: relative;
